--- a/src/app/reactive/pages/basic-page/basic-page.html
+++ b/src/app/reactive/pages/basic-page/basic-page.html
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col">
 
-    <form autocomplete="off">
+    <form autocomplete="off" [formGroup]="myForm" (submit)="onSave()">
 
       <!-- Campo de producto -->
       <div class="mb-3 row">
@@ -13,12 +13,15 @@
 
           <input type="text"
                  class="form-control"
-                 placeholder="Nombre del producto">
+                 placeholder="Nombre del producto"
+                 formControlName="name"
+          >
 
-          <span class="form-text text-danger">
-                        <!-- Debe de ser de 3 letras -->
-                        error message
+          @if (formUtils.isValidField(myForm, 'name')) {
+            <span class="form-text text-danger">
+                       {{formUtils.getFieldError(myForm,'name')}}
                     </span>
+          }
         </div>
       </div>
 
@@ -28,10 +31,13 @@
         <div class="col-sm-9">
           <input type="number"
                  class="form-control"
+                 formControlName="price"
                  placeholder="Precio del producto">
-          <span class="form-text text-danger">
-                        El precio debe de ser 0 o mayor
+          @if (formUtils.isValidField(myForm, 'price')) {
+            <span class="form-text text-danger">
+                       {{formUtils.getFieldError(myForm,'price')}}
                     </span>
+          }
         </div>
       </div>
 
@@ -41,11 +47,14 @@
         <div class="col-sm-9">
           <input type="number"
                  class="form-control"
+                 formControlName="inStorage"
                  placeholder="Existencias del producto">
 
-          <span class="form-text text-danger">
-                         Las existencias deben de ser 0 o mayor
+          @if (formUtils.isValidField(myForm, 'inStorage')) {
+            <span class="form-text text-danger">
+                       {{formUtils.getFieldError(myForm,'inStorage')}}
                     </span>
+          }
         </div>
       </div>
 
@@ -60,34 +69,36 @@
       </div>
 
 
-
     </form>
 
   </div>
 </div>
 
 
-
-
 <div class="row">
   <div class="col">
 
     <span>Valid</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.valid | json }}</pre>
 
     <span>Pristine</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.pristine | json }}</pre>
 
     <span>Touched</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.touched | json }}</pre>
 
     <span>Value</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.value | json }}</pre>
+
+    <span>Errors</span>
+    <pre>{{ myForm.controls['name'].errors | json }}</pre>
+    <pre>{{ myForm.controls['price'].errors | json }}</pre>
+    <pre>{{ myForm.controls['inStorage'].errors | json }}</pre>
 
     <span>Precio</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.controls['price'].value | json }}</pre>
 
     <span>Producto</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.controls['name'].value | json }}</pre>
   </div>
 </div>
