--- a/src/app/reactive/pages/dynamic-page/dynamic-page.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.html
@@ -1,17 +1,21 @@
 <h2>Reactivos: <small> Dinámicos </small></h2>
 <hr>
 
-<form autocomplete="off">
+<form autocomplete="off" [formGroup]="myForm" (submit)="onSave()">
 
   <!-- Nombre -->
   <div class="mb-3 row">
     <label class="col-sm-3 col-form-label">Nombre</label>
     <div class="col-sm-9">
       <input class="form-control"
-             placeholder="Nombre de la persona">
-      <span class="form-text text-danger">
-                   error message
-            </span>
+             placeholder="Nombre de la persona"
+             formControlName="name"
+      >
+      @if (formUtils.isValidField(myForm, 'name')) {
+        <span class="form-text text-danger">
+                       {{ formUtils.getFieldError(myForm, 'name') }}
+                    </span>
+      }
     </div>
   </div>
 
@@ -22,7 +26,10 @@
 
       <div class="input-group">
         <input class="form-control"
-               placeholder="Agregar favorito">
+               placeholder="Agregar favorito"
+               [formControl]="newFavorite"
+               (keydown.enter)="addToFavorites()"
+        >
 
 
         <button class="btn btn-outline-primary"
@@ -37,35 +44,47 @@
   <!-- Lista de Juegos Favoritos -->
   <div class="mb-3 row">
     <label class="col-sm-3 col-form-label">Favoritos</label>
-    <div class="col-sm-9">
+    <div class="col-sm-9" formArrayName="favoriteGames">
 
-      <div class="mb-1">
+      @for (favoriteGame of favoriteGames.controls; track favoriteGame; let i = $index) {
+        <div class="mb-1">
 
-        <div class="input-group">
-          <input class="form-control">
+          <div class="input-group">
+            <input class="form-control"
+                   [formControlName]="i"
+            >
+            <button class="btn btn-outline-danger"
+                    type="button" (click)="deleteFavorite(i)">
+              Eliminar
+            </button>
+          </div>
 
-          <button class="btn btn-outline-danger"
-                  type="button">
-            Eliminar
-          </button>
+          @if (formUtils.isValidFieldOnArray(favoriteGames, i)) {
+            <span class="form-text text-danger">
+                       {{ formUtils.getFieldErrorOnArray(favoriteGames, i) }}
+                    </span>
+          }
+
+
         </div>
-        <span class="form-text text-danger">
-                   Este campo es requerido
-                </span>
+      }
 
-      </div>
+      @if (formUtils.isValidField(myForm, 'favoriteGames')) {
+        <span class="form-text text-danger">
+                       {{ formUtils.getFieldError(myForm, 'favoriteGames') }}
+                    </span>
+      }
 
     </div>
   </div>
-
 
 
   <div class="row">
     <div class="col-sm-12">
       <button type="submit"
               class="btn btn-primary float-end"
+              [disabled]="myForm.invalid"
       >
-        <!-- [disabled]="myForm.invalid" -->
         Guardar
       </button>
     </div>
@@ -75,9 +94,8 @@
 </form>
 
 
-
 <span>Valid</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.value | json }}</pre>
 <br>
 
 <span>Value</span>
