--- a/src/app/reactive/pages/basic-page/basic-page.html
+++ b/src/app/reactive/pages/basic-page/basic-page.html
@@ -17,7 +17,7 @@
                  formControlName="name"
           >
 
-          @if (formUtils.isValidField(myForm, 'name')) {
+          @if (!formUtils.isValidField(myForm, 'name')) {
             <span class="form-text text-danger">
                        {{formUtils.getFieldError(myForm,'name')}}
                     </span>
@@ -33,7 +33,7 @@
                  class="form-control"
                  formControlName="price"
                  placeholder="Precio del producto">
-          @if (formUtils.isValidField(myForm, 'price')) {
+          @if (!formUtils.isValidField(myForm, 'price')) {
             <span class="form-text text-danger">
                        {{formUtils.getFieldError(myForm,'price')}}
                     </span>
@@ -50,7 +50,7 @@
                  formControlName="inStorage"
                  placeholder="Existencias del producto">
 
-          @if (formUtils.isValidField(myForm, 'inStorage')) {
+          @if (!formUtils.isValidField(myForm, 'inStorage')) {
             <span class="form-text text-danger">
                        {{formUtils.getFieldError(myForm,'inStorage')}}
                     </span>
