--- a/src/app/reactive/pages/switches-page/switches-page.html
+++ b/src/app/reactive/pages/switches-page/switches-page.html
@@ -2,7 +2,7 @@
 <hr>
 
 
-<form autocomplete="off">
+<form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSaveForm()">
 
   <!-- Radio -->
   <div class="row mb-3">
@@ -13,7 +13,9 @@
         <input class="form-check-input"
                type="radio"
                value="M"
-               id="radioMasculino">
+               id="radioMasculino"
+               formControlName="gender"
+        >
         <label class="form-check-label" for="radioMasculino">
           Masculino
         </label>
@@ -23,11 +25,19 @@
         <input class="form-check-input"
                type="radio"
                value="F"
-               id="radioFemenino">
+               id="radioFemenino"
+               formControlName="gender"
+        >
         <label class="form-check-label" for="radioFemenino">
           Femenino
         </label>
       </div>
+
+      @if (!formUtils.isValidField(myForm, 'gender')) {
+        <span class="form-text text-danger">
+                       {{ formUtils.getFieldError(myForm, 'gender') }}
+                    </span>
+      }
 
     </div>
   </div>
@@ -40,9 +50,16 @@
       <div class="form-check form-switch mt-2">
         <input class="form-check-input"
                type="checkbox"
-               id="flexSwitchCheckChecked">
+               id="flexSwitchCheckChecked"
+               formControlName="checkNotifications"
+        >
         <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
       </div>
+      @if (!formUtils.isValidField(myForm, 'checkNotifications')) {
+        <span class="form-text text-danger">
+                       {{ formUtils.getFieldError(myForm, 'checkNotifications') }}
+                    </span>
+      }
 
     </div>
   </div>
@@ -54,14 +71,20 @@
       <div class="form-check">
         <input class="form-check-input"
                type="checkbox"
-               id="flexCheckDefault">
+               id="flexCheckDefault"
+               formControlName="termsAndConditions"
+        >
         <label class="form-check-label" for="flexCheckDefault">
           Términos y condiciones de uso
         </label>
       </div>
-      <span class="form-text text-danger">
+
+      @if (!fromUtils.isValidField(myForm, 'termsAndConditions')) {
+        <span class="form-text text-danger">
                  Debe de aceptar las condiciones de uso
               </span>
+      }
+
 
     </div>
   </div>
@@ -81,15 +104,15 @@
 
 
 <h5>Valor del formulario</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.value | json }}</pre>
 <br>
 
 <h5>Persona</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.controls['gender'].value | json }}</pre>
 <br>
 
 <h5>Valid</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.valid | json }}</pre>
 
 <!-- <h5>Términos</h5> -->
 <!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
