--- a/src/app/country/pages/country-page/country-page.html
+++ b/src/app/country/pages/country-page/country-page.html
@@ -1,7 +1,7 @@
 <h1 class="mt-3">Selectores anidados</h1>
-<hr />
+<hr/>
 
-<form>
+<form [formGroup]="myForm">
   <!-- Region -->
   <div class="row mb-3">
     <div class="col">
@@ -9,9 +9,14 @@
       <select formControlName="region" class="form-control">
         <option value="">-- Seleccione Continente --</option>
 
-        <!-- <option [value]="region">
-          {{ region }}
-        </option> -->
+        @for (region of regions(); track region) {
+
+          <option [value]="region">
+            {{ region }}
+          </option>
+
+        }
+
 
       </select>
     </div>
@@ -24,6 +29,14 @@
       <label class="form-label">País:</label>
       <select formControlName="country" class="form-control">
         <option value="">-- Seleccione País --</option>
+
+        @for (country of countriesByRegion(); track country.cca3) {
+
+          <option [value]="country.cca3">
+            {{ country.name.common }}
+          </option>
+
+        }
 
         <!-- <option [value]="country.cca3">
           {{ country.name }}
@@ -42,6 +55,13 @@
       <select formControlName="border" class="form-control">
         <option value="">-- Seleccione la frontera --</option>
 
+        @for (border of bordersOfCountry(); track border.cca3) {
+
+          <option [value]="border.cca3">
+            {{ border.name.common }}
+          </option>
+
+        }
 
         <!-- <option [value]="country.cca3">
           {{ country.name }}
@@ -54,6 +74,6 @@
 
 <h3>Formulario</h3>
 <code>
-  <!-- {{ 'myForm.value' | json }} -->
+  {{ myForm.value| json }}
 </code>
-<p>is form valid: {{ 'myForm.valid' }}</p>
+<p>is form valid: {{ myForm.valid }}</p>
